k8s/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: price-insight-webhook
  namespace: price-insight

spec:
  ingressClassName: nginx
  rules:
    - host: www.qweyha520.bar
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
